--- a/views/login.html
+++ b/views/login.html
@@ -1,18 +1,103 @@
-<html>
-  <body>
-    <form action="/login" method="post">
-      <div>
-        <label>Username:</label>
-        <input type="text" name="username" />
-        <br/>
-      </div>
-      <div>
-        <label>Password:</label>
-        <input type="password" name="password" />
-      </div>
-      <div>
-        <input type="submit" value="Submit" />
-      </div>
-    </form>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Sign In</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Google Font -->
+    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
+
+    <!-- custom CSS -->
+     <link rel="stylesheet" href="/public/css/pluggins/normalize.css">
+        <link rel="stylesheet" href="/public/css/pluggins/login.css">
+
+    <!-- Custom Fonts
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+  <body data-vide-bg="/public/js/pluggins/video/ocean">
+
+   <div class="jumbotron"> 
+    <div class="form">
+      <!--
+      <ul class="tab-group">
+        <li class="tab"><a href="#signup">Sign Up</a></li>
+        <li class="tab active"><a href="#login">Log In</a></li>
+      </ul>
+
+      <div class="tab-content">
+         <div id="signup">
+          <h1>Sign Up for Free</h1>
+
+          <form action="/login" method="post">
+
+          <div class="top-row">
+            <div class="field-wrap">
+              <input type="text" placeholder="First Name *" class="req" required autocomplete="on" />
+            </div>
+
+            <div class="field-wrap">
+              <input type="text" placeholder="Last Name *" class="req" required autocomplete="on"/>
+            </div>
+          </div>
+
+          <div class="field-wrap">
+
+            <input type="email" placeholder="Email *" class="req" required autocomplete="on"/>
+          </div>
+
+          <div class="field-wrap">
+            <input type="password" placeholder="Password *" class="req" required autocomplete="off"/>
+          </div>
+
+          <button type="submit" class="button button-block"/>Get Started</button>
+
+          </form>
+
+        </div> -->
+
+        <div id="login">
+          <h1>Sign In</h1>
+
+          <form action="/login" method="post">
+            <div class="field-wrap">
+
+            <input name="username" type="email" placeholder="Email *" class="req" required autocomplete="on"/>
+          </div>
+
+          <div class="field-wrap">
+            <input name="password" type="password" placeholder="Password *" class="req" required autocomplete="on"/>
+          </div>
+
+          <p class="forgot"><a href="#">Forgot Password?</a></p>
+
+          <button class="button button-block"/>Log In</button>
+
+          </form>
+
+        </div>
+        </div>
+        <script src='https://code.jquery.com/jquery-2.2.2.min.js'></script>
+        <script src="/public/js/pluggins/handy.js"></script>
+        <script src="/public/js/pluggins/jquery.vide.js"></script>
+
   </body>
 </html>
