--- a/views/base.ejs
+++ b/views/base.ejs
@@ -6,7 +6,7 @@
 
 <body>
   <div id="wrapper">
-    <% include ./partials/header %>
+    <% include ./partials/navbar %>
       <div class="container">
       <div class="jumbotron">
         <div class="row">
