--- a/views/base.ejs
+++ b/views/base.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title></title>
    <% include ./partials/head %>
 </head>
 
@@ -8,67 +9,12 @@
   <div id="wrapper">
     <% include ./partials/navbar %>
       <div class="container">
-      <div class="jumbotron">
-        <div class="row">
-              <div class="col-lg-12 col-md-6">
-                  <a href="new_job.html">
-                  <div class="panel panel-primary">
-                      <div class="panel-heading">
-                          <div class="row">
-                              <div class="col-xs-3">
-                                  <i class="fa fa-user-plus fa-4x"></i>
-                              </div>
-                              <div class="col-xs-9 text-right">
-                                  <h2>New Work Order</h2>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  </a>
-              </div>
-              <div class="col-lg-12 col-md-6">
-                  <a href="Completed_Orders.html">
-                  <div class="panel panel-warning">
-                      <div class="panel-heading">
-                          <div class="row">
-                              <div class="col-xs-3">
-                                  <i class="fa fa-tasks fa-4x"></i>
-                              </div>
-                              <div class="col-xs-9 text-right">
-                                  <h2>My Jobs</h2>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  </a>
-              </div>
-              <div class="col-lg-12 col-md-6">
-                  <div class="panel panel-info">
-                      <div class="panel-heading">
-                          <div class="row">
-                              <div class="col-xs-3">
-                                  <i class="fa fa-calendar-plus-o fa-4x"></i>
-                              </div>
-                              <div class="col-xs-9 text-right">
-                                  <h2>My Calendar</h2>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-                    <!-- /.row -->
-            </div>
-            <!-- /#page-wrapper -->
-          </div>
-        </div>
-      </div>
-    </div>
+      
+        </div><!-- container -->
   </div> <!-- wrapper -->
 
 
-<!-- jQuery -->
+<!-- Scripts -->
 <% include ./partials/scriptsloader %>
 </body>
-
 </html>
