--- a/views/partials/scriptsloader.ejs
+++ b/views/partials/scriptsloader.ejs
@@ -1,9 +1,16 @@
+<!-- JQuery -->
 <script src="http://code.jquery.com/jquery-1.12.0.min.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+<!-- Material Design Core JavaScript -->
 <script src="/public/js/material.min.js"></script>
 <script src="/public/js/ripples.min.js"></script>
-<script src="/public/js/pluggins/handy.js"></script>
+
+<!-- Initializing Material Design -->
 <script>$.material.init()</script>
+
+<!-- HandyGuy Custom -->
+<script src="/public/js/pluggins/handy.js"></script>
+
