--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,105 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Sign In</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Google Font -->
-    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
-
-    <!-- custom CSS -->
-     <link rel="stylesheet" href="/public/css/pluggins/normalize.css">
-        <link rel="stylesheet" href="/public/css/pluggins/login.css">
-
-    <!-- Custom Fonts
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <title>Welcome to Handy Guy Billing Buddy</title>
+    <!-- custom CSS
+    <link rel="stylesheet" href="/public/css/pluggins/login.css">-->
+   <% include ./partials/head %>
 
 </head>
+<!-- LOGIN FORM -->
+<body data-vide-bg="/public/video/ocean">
+  <div id="wrapper">
+      <div class="container-fluid">
+            <div class="row vertical-offset-100">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
 
-  <body data-vide-bg="/public/js/pluggins/video/ocean">
+                        <form accept-charset="UTF-8" role="form" action="/login" method="post">
+                        <div class="row">
+                            <img src="/public/img/logo_full.png" class="img-responsive pull-right" alt="HandyGuy Logo" width="150" height= automatic > 
+                        </div>
+                    <fieldset>
+                        <!-- Error Message if wrong Password -->
+                        <% if (message.length > 0) 
+                            { %>
+                            <div class="alert alert-dismissible alert-danger">
+                                <button type="button" class="close" data-dismiss="alert">×</button>
+                                    <%= message %>  
+                            </div>
+                            <% } 
+                         %>
+                        <!-- Error Message ends if wrong Password -->
+                        <div class="form-group">
+                            <legend class ="text-center"><h1>Sign In</h1></legend>
+                            <label for="inputEmail label-floating" class="col-md-2 control-label">Email</label>
+                      <div class="col-md-10">
+                        <input type="email" class="form-control" id="email" name="email" autocomplete="on">
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="inputPassword label-floating" class="col-md-2 control-label">Password</label>
 
-   <div class="jumbotron"> 
-    <div class="form">
-      <!--
-      <ul class="tab-group">
-        <li class="tab"><a href="#signup">Sign Up</a></li>
-        <li class="tab active"><a href="#login">Log In</a></li>
-      </ul>
+                      <div class="col-md-10">
+                        <input type="password" class="form-control" id="password" name="password" autocomplete="on">
+                        </div>
+                    </div>
+                    <div class="form-group text-center">
+                        <div class="togglebutton">
+                        <label>
+                            <input type="checkbox" name="remember" checked> Remember
+                        </label>
+                        <input class="btn btn-lg btn-success btn-block" type="submit" value="login">
+                        <p class="text-right"><a href="#">Forgot password?</a></p>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="form-group text-center">
+                        <p><a href="/signup" class="btn btn-primary btn-lg">Create new account for FREE</a></p>
+                    </div> 
+                    </fieldset>
+                    </form>
+                </div>
+          
+            </div> <!-- pannel -->
+            </div> <!-- col-offset -->
+        </div><!-- row -->
+    </div><!-- container -->
+  </div> <!-- wrapper -->
 
-      <div class="tab-content">
-         <div id="signup">
-          <h1>Sign Up for Free</h1>
 
-          <form action="/login" method="post">
-
-          <div class="top-row">
-            <div class="field-wrap">
-              <input type="text" placeholder="First Name *" class="req" required autocomplete="on" />
-            </div>
-
-            <div class="field-wrap">
-              <input type="text" placeholder="Last Name *" class="req" required autocomplete="on"/>
-            </div>
-          </div>
-
-          <div class="field-wrap">
-
-            <input type="email" placeholder="Email *" class="req" required autocomplete="on"/>
-          </div>
-
-          <div class="field-wrap">
-            <input type="password" placeholder="Password *" class="req" required autocomplete="off"/>
-          </div>
-
-          <button type="submit" class="button button-block"/>Get Started</button>
-
-          </form>
-
-        </div> -->
-
-        <div id="login">
-          <h1>Sign In</h1>
-          <% if (message.length > 0) { %>
-        <div class="alert alert-danger" style="background-color: white;"><%= message %></div>
-          <% } %>
-          <form action="/login" method="post">
-            <div class="field-wrap">
-
-            <input name="email" type="email" placeholder="Email *" class="req" required autocomplete="on"/>
-          </div>
-
-          <div class="field-wrap">
-            <input name="password" type="password" placeholder="Password *" class="req" required autocomplete="on"/>
-          </div>
-
-          <p class="forgot"><a href="#">Forgot Password?</a></p>
-
-          <button class="button button-block"/>Log In</button>
-
-          </form>
-
-        </div>
-        </div>
-        <script src='https://code.jquery.com/jquery-2.2.2.min.js'></script>
-        <script src="/public/js/pluggins/handy.js"></script>
-        <script src="/public/js/pluggins/jquery.vide.js"></script>
-
-  </body>
+<!-- Scripts -->
+<% include ./partials/scriptsloader %>
+<!-- HandyGuy Custom -->
+<script src="/public/js/pluggins/jquery.vide.js"></script>
+</body>
 </html>
