--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,20 +4,22 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title></title>
 <!-- Material Design fonts -->
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-<!-- Bootstrap -->
+
+<!-- Bootstrap css-->
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
 <!-- Bootstrap Material Design -->
 <link rel="stylesheet" type="text/css" href="/public/css/bootstrap-material-design.css">
 <link rel="stylesheet" type="text/css" href="/public/css/ripples.min.css">
+
+<!-- Bootstrap Material Design -->
 <link rel="stylesheet" type="text/css" href="/public/css/handy.css">
 
-<!-- Custom Fonts -->
-<link href="/public/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<!-- Font Awesome -->
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
