--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Handy Guy Logo</a>
+            <a href="./dashboard" class="pull-left"><img src="/public/img/logo_nav.png" alt="logo" width="90"></a>
         </div>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
@@ -17,11 +17,11 @@
                         <a href="#"><i class="fa fa-fw fa-user"></i> Change Password</a>
                     </li>
                     <li>
-                        <a href="password_change.html"><i class="fa fa-fw fa-gear"></i> Profile Settings</a>
+                        <a href="/userprofile"><i class="fa fa-fw fa-gear"></i> Profile Settings</a>
                     </li>
                     <!--<li class="divider"></li>-->
                     <li>
-                        <a href="/logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
+                        <a href="/login"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
                     </li>
                 </ul>
             </li>
@@ -30,14 +30,14 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse navbar-right">
             <ul class="nav navbar-nav side-nav">
                 <li>
-                  <a href="new_job.html"><i class="fa fa-fw fa-user-plus"></i> New Work Order</a>
+                  <a href="neworder.ejs"><i class="fa fa-fw fa-user-plus"></i> New Work Order</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fa fa-fw fa-calendar-plus-o"></i> My Calendar </a>
+                    <a href="#"><i class="fa fa-fw fa-calendar"></i> My Calendar </a>
                 </li>
 
                 <li>
-                    <a href="Completed_Orders.html"><i class="fa fa-fw fa-tasks"></i> My Jobs </a>
+                    <a href="#"><i class="fa fa-fw fa-tasks"></i> My Jobs </a>
                 </li>
 
             </ul>
