--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,77 +1,91 @@
+
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
     <title>Sign Up</title>
-
-    <!-- Bootstrap Core CSS
-    <link href="css/bootstrap.min.css" rel="stylesheet">-->
-
-    <!-- Google Font -->
-    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,300,600' rel='stylesheet' type='text/css'>
-
-    <!-- custom CSS -->
-     <link rel="stylesheet" href="/public/css/pluggins/normalize.css">
-        <link rel="stylesheet" href="/public/css/pluggins/login.css">
-
-    <!-- Custom Fonts
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">-->
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+   <% include ./partials/head %>
 
 </head>
+<!-- Sign Up FORM -->
+<body data-vide-bg="/public/video/ocean">
+  <div id="wrapper">
+      <div class="container-fluid">
+            <div class="row vertical-offset-100">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
 
-  <body data-vide-bg="/public/video/ocean">
+                        <form accept-charset="UTF-8" role="form" action="/signup" method="post" id="signupform" class="form-horizontal" data-toggle="validator">
+                        
+                        <div class="row">
+                            <img src="/public/img/logo_full.png" class="img-responsive pull-right" alt="HandyGuy Logo" width="150" height= automatic > 
+                        </div>
+                    <fieldset>
+                        <!-- Error Message if Account Already exists -->
+                        <% if (message.length > 0) 
+                            { %>
+                            <div class="alert alert-dismissible alert-danger">
+                                <button type="button" class="close" data-dismiss="alert">×</button>
+                                    <%= message %>  
+                            </div>
+                            <% } 
+                         %>
+                        <!-- Error Message ends if account Already Exists -->
+                    <div class="form-group">
+                    <legend class ="text-center"><h1>Create a New Account</h1></legend>
+                      <label for="first_name label-floating" class="col-md-2 control-label">First Name</label>
 
-    <div class="form">
-      <div class="tab-content">
-         <div id="signup">
-          <h1>Sign Up for Free</h1>
-          <% if (message.length > 0) { %>
-        <div class="alert alert-danger" style="background-color: white;"><%= message %></div>
-          <% } %>
-          <form action="/signup" method="post">
+                      <div class="col-md-10">
+                        <input type="text" class="form-control" id="first_name" name="first_name" autocomplete="on" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="last_name label-floating" class="col-md-2 control-label">Last Name</label>
+                      <div class="col-md-10">
+                        <input type="text" class="form-control" id="last_name" name="last_name" autocomplete="on" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="email label-floating" class="col-md-2 control-label">Email</label>
+                      <div class="col-md-10">
+                        <input type="email" class="form-control" id="email" name="email" autocomplete="off" data-error="Invalid-email" required>
+                        <div class="help-block with-errors"></div>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <label for="password label-floating" class="col-md-2 control-label">Password</label>
+                      <div class="col-md-10">
+                        <input type="password" class="form-control" id="password" name="password" autocomplete="off" data-minlength="6" required>
+                        <div class="help-block">Minimum of 6 characters</div>
+                        </div>
+                    </div>
 
-          <div class="top-row">
-            <div class="field-wrap">
-              <input type="text" name="first_name" placeholder="First Name *" class="req" required autocomplete="on" />
-            </div>
+                    <div class="form-group">
+                      <label for="confirmPassword label-floating" class="col-md-2 control-label">Re-type Password</label>
+                      <div class="col-md-10">
+                        <input type="password" class="form-control" id="confirmPassword" data-match="#password" data-match-error="Whoops, these don't match"autocomplete="off" required>
+                        <div class="help-block with-errors"></div>
+                        </div>
+                    </div>
+                    <div class="form-group text-center">
+                        <button type="submit" value="submit" class="btn btn-success">Get Started</button>
+                    </div>
+                    <div class="form-group text-center">
+                        <p class="text-info"><a href="/login">Already Have Account? Sign In</a></p>
+                    </div>
+                    </div>
+                    </fieldset>
+                    </form>
+                </div>
+            </div> <!-- pannel -->
+            </div> <!-- col-offset -->
+        </div><!-- row -->
+    </div><!-- container -->
+  </div> <!-- wrapper -->
 
-            <div class="field-wrap">
-              <input type="text" name="last_name" placeholder="Last Name *" class="req" required autocomplete="on"/>
-            </div>
-          </div>
 
-          <div class="field-wrap">
-
-            <input type="email" name="email" placeholder="Email *" class="req" required autocomplete="on"/>
-          </div>
-
-          <div class="field-wrap">
-            <input type="password" name="password" placeholder="Password *" class="req" required autocomplete="off"/>
-          </div>
-
-          <button type="submit" value="submit" class="button button-block"/>Get Started</button>
-
-          </form>
-
-        </div>
-
-        <script src='https://code.jquery.com/jquery-2.2.2.min.js'></script>
-        <script src="public/js/pluggins/handy.js"></script>
-        <script src="public/js/pluggins/jquery.vide.js"></script>
-
-  </body>
+<!-- Scripts -->
+<% include ./partials/scriptsloader %>
+<script src="/public/js/pluggins/jquery.vide.js"></script>
+</body>
 </html>
