added some pages

--- a/views/userprofile.ejs
+++ b/views/userprofile.ejs
@@ -20,8 +20,7 @@
                     <label for="business_name" class="control-label col-md-2">Business Name</label>
                     <!-- Place Holder for Business Name-->
                     <div class="col-md-10">
-                        <input id="business_name" name="business_name" type="text"
-                        class="form-control" required>
+                        <p class="lead"><%=BusinessProfile.business_name%></p>
                     </div>
                 </div>
                 <!-- Phone input-->
