--- a/views/partials/scriptsloader.ejs
+++ b/views/partials/scriptsloader.ejs
@@ -14,3 +14,6 @@
 <!-- HandyGuy Custom -->
 <script src="/public/js/pluggins/handy.js"></script>
 
+<!-- Validator for from validation -->
+<script src="/public/js/pluggins/validator.js"></script>
+
